# DG_sample

./: .gitignore  CMakeLists.txt
dependencies/Glad/include/glad/: glad.hpp
dependencies/Glad/src/: glad.cpp
include/: imconfig.hpp  indexBuffer.hpp  openglError.hpp  renderer.hpp  shader.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp
include/Test/: test.hpp  testBatchRenderDynamic.hpp  testBatchRendering.hpp  testBatchRenderingTexture.hpp  testClearColor.hpp  testTexture2D.hpp
res/Shaders/: BasicTexture.glsl  BatchColor.glsl  BatchTexture.glsl
src/: indexBuffer.cpp  main.cpp  openglError.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
src/Test/: test.cpp  testBatchRenderDynamic.cpp  testBatchRendering.cpp  testBatchRenderingTexture.cpp  testClearColor.cpp  testTexture2D.cpp
